# vectorized-benchmark

./: .gitignore  CMakeLists.txt  README.md
results/: axpy.csv  dot.csv  nrm2.csv  results.csv  sumexp.csv
src/: bench_axpy.cpp  bench_dot.cpp  bench_nrm2.cpp  bench_sumexp.cpp  common.hpp  main.cpp  plot.jl
